--- a/Design/style.css
+++ b/Design/style.css
@@ -5,8 +5,15 @@
 }
 
 body {
-    background-color: red;
+    background-color: blue;
     color: white;
     text-align: center;
     padding: 0;
+}
+
+p {
+    padding: 1rem;
+    margin: 1rem;
+    display: block;
+    color: red;
 }
